[package]
name = "cuter-nucleotides"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"

[dependencies.bytemuck]
git = "https://github.com/Lokathor/bytemuck"
rev = "2c8ce95548d2096f2092fedc05c4fc5af6824162"
features = ["nightly_stdsimd"]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
